--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.12.0",
+    "@pixi/react": "^7.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "ajv": "^8.12.0",
     "canvas-confetti": "^1.6.0",
@@ -48,6 +49,7 @@
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
+    "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
