--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@use-gesture/react": "^10.2.26",
     "ajv": "^8.12.0",
     "canvas-confetti": "^1.6.0",
     "events": "^3.3.0",
@@ -43,7 +44,6 @@
     "gatsby-plugin-typescript": "^5.8.0",
     "gatsby-source-local-git": "^1.3.0",
     "gatsby-source-package": "^1.0.1",
-    "hammerjs": "^2.0.8",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
@@ -58,7 +58,6 @@
     "@testing-library/react": "^14.0.0",
     "@types/canvas-confetti": "^1.6.0",
     "@types/events": "^3.0.0",
-    "@types/hammerjs": "^2.0.41",
     "@types/jest": "^29.5.0",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.194",
