--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     env:
-      - BUILD_ADD_PATH_PREFIX: true
+      BUILD_ADD_PATH_PREFIX: true
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
