--- a/package.json
+++ b/package.json
@@ -40,14 +40,18 @@
     "gatsby": "^5.8.1",
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-offline": "^6.8.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-typescript": "^5.8.0",
+    "gatsby-source-filesystem": "^5.10.0",
     "gatsby-source-local-git": "^1.3.0",
     "gatsby-source-package": "^1.0.1",
+    "i18next": "^22.5.0",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-redux": "^8.0.5",
     "toposort": "^2.0.2"
   },
