--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,10 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "plugins": ["react", "@typescript-eslint"]
 }
