--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ajv": "^8.12.0",
     "canvas-confetti": "^1.6.0",
     "events": "^3.3.0",
+    "file-saver": "^2.0.5",
     "gatsby": "^5.10.0",
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-offline": "^6.10.0",
@@ -60,6 +61,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/canvas-confetti": "^1.6.0",
     "@types/events": "^3.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^29.5.1",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.194",
