--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@use-gesture/react": "^10.2.27",
     "ajv": "^8.12.0",
-    "canvas-confetti": "^1.6.0",
+    "core-js": "^3.31.1",
     "events": "^3.3.0",
     "file-saver": "^2.0.5",
     "gatsby": "^5.11.0",
