--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource-variable/roboto-flex": "^5.0.3",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.6",
-    "@mui/system": "^5.13.6",
+    "@fontsource-variable/roboto-flex": "^5.0.5",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "@mui/system": "^5.13.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@use-gesture/react": "^10.2.27",
     "ajv": "^8.12.0",
@@ -45,18 +45,18 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-local-git": "^1.3.0",
     "gatsby-source-package": "^1.0.1",
-    "i18next": "^22.5.1",
+    "i18next": "^23.2.8",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.3.1",
+    "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
     "toposort": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
+    "@babel/core": "^7.22.8",
     "@babel/preset-react": "^7.22.5",
     "@testing-library/react": "^14.0.0",
     "@types/canvas-confetti": "^1.6.0",
@@ -70,19 +70,20 @@
     "@types/react-redux": "^7.1.25",
     "@types/toposort": "^2.0.3",
     "@types/webpack-bundle-analyzer": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@yarnpkg/sdks": "^3.0.0-rc.48",
     "ajv-json-loader": "^0.2.0",
-    "babel-jest": "^29.5.0",
+    "babel-jest": "^29.6.1",
     "babel-preset-gatsby": "^3.11.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "gatsby-cli": "5.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "jsdom": "^22.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "~5.0.4",
