--- a/package.json
+++ b/package.json
@@ -25,69 +25,69 @@
   },
   "homepage": "https://github.com/CSharperMantle/periotrisjs#readme",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource-variable/roboto-flex": "^5.0.5",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
-    "@mui/system": "^5.13.7",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@use-gesture/react": "^10.2.27",
-    "ajv": "^8.12.0",
-    "core-js": "^3.31.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource-variable/roboto-flex": "^5.1.0",
+    "@mui/icons-material": "^5.16.12",
+    "@mui/material": "^5.16.12",
+    "@mui/system": "^5.16.12",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@use-gesture/react": "^10.3.1",
+    "ajv": "^8.17.1",
+    "core-js": "^3.39.0",
     "events": "^3.3.0",
     "file-saver": "^2.0.5",
-    "gatsby": "^5.11.0",
-    "gatsby-plugin-manifest": "^5.11.0",
-    "gatsby-plugin-offline": "^6.11.0",
+    "gatsby": "^5.14.1",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
     "gatsby-plugin-react-i18next": "^3.0.1",
-    "gatsby-plugin-typescript": "^5.11.0",
-    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-plugin-typescript": "^5.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
     "gatsby-source-local-git": "^1.3.0",
-    "gatsby-source-package": "^1.0.1",
-    "i18next": "^23.2.8",
+    "gatsby-source-package": "^1.1.1",
+    "i18next": "^23.16.8",
     "is-in-browser": "^2.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1",
-    "react-redux": "^8.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^13.5.0",
+    "react-redux": "^8.1.3",
     "toposort": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/preset-react": "^7.22.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/canvas-confetti": "^1.6.0",
-    "@types/events": "^3.0.0",
-    "@types/file-saver": "^2.0.5",
-    "@types/jest": "^29.5.2",
-    "@types/jsdom": "^21.1.1",
-    "@types/lodash": "^4.14.195",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-redux": "^7.1.25",
-    "@types/toposort": "^2.0.3",
-    "@types/webpack-bundle-analyzer": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@yarnpkg/sdks": "^3.0.0-rc.48",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/events": "^3.0.3",
+    "@types/file-saver": "^2.0.7",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.13",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-redux": "^7.1.34",
+    "@types/toposort": "^2.0.7",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@yarnpkg/sdks": "^3.2.0",
     "ajv-json-loader": "^0.2.0",
-    "babel-jest": "^29.6.1",
-    "babel-preset-gatsby": "^3.11.0",
-    "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2",
-    "gatsby-cli": "5.11.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.14.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.3",
+    "gatsby-cli": "5.14.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.1",
+    "rimraf": "^5.0.10",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.1.6",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "webpack-bundle-analyzer": "^4.10.2"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@4.5.3"
 }
