--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
-    "@testing-library/react": "^14.3.1",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@testing-library/react": "^16.1.0",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/events": "^3.0.3",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
@@ -70,23 +73,24 @@
     "@types/react-redux": "^7.1.34",
     "@types/toposort": "^2.0.7",
     "@types/webpack-bundle-analyzer": "^4.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "@yarnpkg/sdks": "^3.2.0",
     "ajv-json-loader": "^0.2.0",
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.14.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
     "gatsby-cli": "5.14.0",
+    "globals": "^15.14.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.10",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
-    "typescript": "~5.1.6",
+    "typescript": "~5.7.2",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@4.5.3"
