--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,52 @@
-name: Deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
-    runs-on: ubuntu-22.04
-    env:
-      BUILD_ADD_PATH_PREFIX: true
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 22.x
-          cache: "yarn"
+          cache: yarn
+      - name: Configure pages
+        uses: actions/configure-pages@v5
+        with:
+          static_site_generator: gatsby
       - name: Set up dependencies
         run: |
           yarn install --immutable
       - name: Build
+        env:
+          PREFIX_PATHS: 'true'
         run: |
           yarn run build --prefix-paths
           yarn run check
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4.4.2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: gh-pages
-          folder: public
+          path: ./public
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy
+        id: deploy
+        uses: actions/deploy-pages@v4
