--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-22.04
-          - windows-2022
+          - ubuntu-latest
+          - windows-2025
         node-version:
           - 22.x
     runs-on: ${{ matrix.os }}
@@ -34,7 +34,7 @@ jobs:
   coverage:
     needs: [build]
     if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop' }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
