--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-util": "^30.0.2",
     "jsdom": "^22.1.0",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
